# kaggle-triagegeist

./: .gitignore  LICENSE  README.md  pyproject.toml
azure/: AZURE_SETUP.md  environment.yml  train_mimic_pipeline.py
data/: README.md
notebook/: requirements.txt  triagegeist_submission.ipynb  vangogh_palette.py
report/: references.bib  thiebaut-report.sty  triagegeist_report.tex
report/chapters/: 00_abstract.tex  01_triage_problem.tex  02_competition_discovery.tex  appendix_waterfalls.tex  chapter03_mimic.tex  chapter04_features.tex  chapter05_embeddings.tex  chapter06_architecture.tex  chapter07_results.tex  chapter08_safety.tex  chapter09_fairness.tex  chapter10_explainability.tex  chapter11_calibration.tex  chapter12_limitations.tex  chapter13_reflections.tex
report/latex-figures/: generate_all_figures.py  generate_forest_plot.py  generate_shap_combined.py  generate_shap_waterfall_combined.py
results/kaggle/: blend_results.json  exact_match_analysis.json  honest_tabular_results.json  kaggle_class_distribution.csv  keyword_distribution_by_esi.csv  ordinal_penalty_kaggle_results.json  system_vs_acuity_crosstab.csv  tabular_feature_importance.csv  text_exploit_results.json
results/mimic/: age_band_ut_by_threshold.json  asymmetric_weight_sweep.csv  bias_audit_single_axis.csv  bias_audit_summary.json  (+2 more)
supplementary_dataset/: README.md  dataset-metadata.json
triagegeist/: __init__.py  bias_audit.py  clinical_scores.py  data_processing.py  embedding_extraction.py  model_training.py  shap_analysis.py  threshold_optimization.py  utils.py
writeup/: WRITEUP.md
(+8 files in other folders)
