[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triagegeist"
version = "1.0.0"
description = "Clinical safety-aware emergency triage prediction (ESI 1–5)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "shap>=0.45.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "transformers>=4.40.0",
    "sentence-transformers>=2.5.0",
    "torch>=2.1.0",
]

[tool.setuptools.packages.find]
include = ["triagegeist*"]
